# sistema_codificacao_binaria_combinacao_palavras

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
data/: ad_history.txt  ll_history.txt  set_words_found.txt  sorting_comp.txt
functions/: functions_1.c  functions_1.h  functions_2.c  functions_2.h
html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  classes.html  dir_35baea09d55bebfe17654fdf4bf061ce.html  dir_74f8ac56157ed0afde7efc2459d98b2b.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_c13f6416813340f4a4358ca3d2f08f85.html  dir_c8284c1556687c316ef5a29057b070f8.html  dir_dd8c3e830a285e9f4b22b2551e0f5509.html  dir_f89abcb304c928c7d889aa5625570de5.html  doxygen_crawl.html  files.html  functions.html  functions__1_8c.html  functions__1_8h.html  functions__1_8h_source.html  functions__2_8c.html  functions__2_8h.html  functions__2_8h_source.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_f.html  globals_func.html  globals_func_c.html  globals_func_d.html  globals_func_e.html  globals_func_f.html  globals_func_g.html  globals_func_h.html  globals_func_i.html  globals_func_k.html  globals_func_l.html  (+42 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  (+58 more)
test_functions/: test_functions_1.c  test_functions_1.h  test_functions_2.c  test_functions_2.h
